# nonebot-plugin-manga-translator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml
nonebot-plugin-manga-translator/: __init__.py  utils.py
nonebot_plugin_manga_translator/: __init__.py  config.py  utils.py
